--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Minh Nhut Huynh",
   "license": "MIT",
   "scripts": {
+    "start:dev": "nodemon",
+    "start": "npm run build && node build/index.js",
+    "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -14,6 +17,8 @@
     "@types/multer": "^1.4.4",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "config": "^3.3.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
@@ -21,6 +26,8 @@
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
     "reflect-metadata": "^0.1.13",
-    "routing-controllers": "^0.9.0-alpha.6"
+    "routing-controllers": "^0.9.0-alpha.6",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.5"
   }
 }
