--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "strict": true,
-        "target": "es2018",
-        "module": "esnext",
+        "target": "es6",
+        "module": "commonjs",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "noImplicitAny": false,
@@ -14,6 +14,8 @@
         "strictFunctionTypes": false,
         "sourceMap": true,
         "allowJs": true,
+        "outDir": "build",
+        "rootDir": "src",
         "baseUrl": ".",
         "paths": {
             "@/*": [
@@ -23,17 +25,14 @@
                 "./src/*"
             ]
         },
-        "lib": [
-            "esnext",
-            "esnext.asynciterable",
-            "dom"
-        ],
         "types": [
             "@types/node",
         ],
-        "typeRoots": [
-            "./src/typings"
-        ]
+        "lib": [
+            "esnext",
+            "es6",
+            "dom"
+        ],
     },
     "include": [
         "src/**/*.ts",
