--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
