change name of config file to dev which related to environment variable, add cross-env lib to cross setting environment variable

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Minh Nhut Huynh",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon",
-    "start": "npm run build && node build/index.js",
+    "start:dev": "cross-env NODE_ENV=dev nodemon",
+    "start": "cross-env NODE_ENV=production npm run build && node build/index.js",
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
