--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@types/multer": "^1.4.4",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
@@ -23,11 +24,13 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
+    "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
   }
