--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "start:dev": "cross-env NODE_ENV=dev nodemon",
     "start": "cross-env NODE_ENV=production npm run build && node build/index.js",
     "build": "rimraf ./build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=dev jest --testTimeout=10000"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/multer": "^1.4.4",
+    "@types/supertest": "^2.0.10",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.3.1",
@@ -30,6 +31,7 @@
     "nodemon": "^2.0.6",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.9.0-alpha.6",
+    "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
